<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btBack"
            android:layout_gravity="left"
            android:onClick="onBackButtonClick"
            android:text="@string/bt_back"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvTitleEdit"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            android:text="@string/tv_title_edit"
            android:textSize="25sp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btSave"
            android:layout_gravity="right"
            android:onClick="onSaveButtonClick"
            android:textSize="20sp"
            android:text="@string/bt_update"/>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_store_name"
            android:textSize="20sp"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/edInputStore"
            android:layout_marginLeft="25dp"
            android:layout_weight="1"
            android:inputType="text"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_tel"
            android:textSize="20sp"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/edInputTel"
            android:layout_marginLeft="25dp"
            android:layout_weight="1"
            android:inputType="number"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_url"
            android:textSize="20sp"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/edInputUrl"
            android:layout_marginLeft="25dp"
            android:layout_weight="1"
            android:inputType="textUri"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/tv_memo"
        android:textSize="20sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/edInputMemo"
        android:layout_weight="1"
        android:gravity="top"
        android:inputType="textMultiLine"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btDelete"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="25dp"
        android:background="#FF6666"
        android:onClick="onDeleteButtonClick"
        android:text="@string/bt_delete"
        android:textSize="25sp"/>




</LinearLayout>